Zip Packaging (Maven Assembly) [close #8]

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,24 @@
 					</execution>
 				</executions>
 			</plugin>
+			<!-- Package ZIP to upload to repo -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<descriptor>assembly/package.xml</descriptor>
+					<finalName>${project.artifactId}-${project.version}</finalName>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 		<!-- Deployment Maven-S3 -->
 		<extensions>
