--- a/assembly/package.xml
+++ b/assembly/package.xml
@@ -26,6 +26,13 @@
 			</includes>
 		</fileSet>
 		<fileSet>
+			<directory>${project.basedir}/src/main/resources/</directory>
+			<outputDirectory>/sampleconf/</outputDirectory>
+			<includes>
+				<include>ciphersuites.conf</include>
+			</includes>
+		</fileSet>
+		<fileSet>
 			<directory>${project.basedir}/assembly/</directory>
 			<outputDirectory>/conf/</outputDirectory>
 			<includes>
