back to bouncer.conf [v1.6.1]

--- a/assembly/package.xml
+++ b/assembly/package.xml
@@ -22,7 +22,7 @@
 			<directory>${project.basedir}/sampleconf/</directory>
 			<outputDirectory>/sampleconf/</outputDirectory>
 			<includes>
-				<include>bouncer.properties</include>
+				<include>bouncer.conf</include>
 			</includes>
 		</fileSet>
 		<fileSet>
