update sample config

--- a/sampleconf/bouncer.conf
+++ b/sampleconf/bouncer.conf
@@ -1,13 +1,35 @@
 ## General Format
 ## <left-addr> <left-port> <right-addr> <right-port> [options]
-#
-## Forward (rinetd style)
+
+##### Port Redirector (rinetd style) #####
+
 ## <listen-addr> <listen-port> <remote-addr> <remote-port> [options]
 # 0.0.0.0 80 127.0.0.1 8080
 # 127.0.0.1 8080 encrypted.google.com 443 LB=RR,TUN=SSL
-#
-## Reverse tunnels
-## <remote-addr> <remote-port> <remote-tun-addr> <remote-tun-port> MUX-OUT
-# 192.168.1.1 80 192.168.2.1 5555 MUX=OUT,MUX=SSL,SSL=client.crt:client.key:server.crt
+
+##### Reverse tunnels #####
+
+### Bouncer pre-2.0 syntax (rinetd style) ###
+
+## MUX-IN
 ## <listen-tun-addr> <listen-tun-port> <listen-addr> <listen-port> MUX-IN
 # 192.168.2.1 5555 127.0.0.1 8080 MUX=IN,MUX=SSL,SSL=server.crt:server.key:client.crt
+
+## MUX-OUT
+## <remote-addr> <remote-port> <remote-tun-addr> <remote-tun-port> MUX-OUT
+# 192.168.1.1 80 192.168.2.1 5555 MUX=OUT,MUX=SSL,SSL=client.crt:client.key:server.crt
+
+### Alternative syntax with support for multi-port ###
+
+## MUX-IN
+## <mux-listen|tun-listen> <mux-name> <address> <port> [opts]
+# mux-listen mux1 0.0.0.0 5555 MUX=AES,AES=changeit,AESBITS=256,AESALG=AES/CTR/NoPadding
+# tun-listen mux1 0.0.0.0 2222 TUN_ID=1
+# tun-listen mux1 0.0.0.0 8080 TUN_ID=2
+
+## MUX-OUT
+## <mux-connect|tun-connect> <mux-name> <address> <port> [opts]
+# mux-connect mux1 127.0.0.1 5555
+# tun-connect mux1 192.168.2.1 80 TUN_ID=1
+# tun-connect mux1 192.168.2.1 22 TUN_ID=2
+
