--- a/sampleconf/bouncer.conf
+++ b/sampleconf/bouncer.conf
@@ -1,15 +1,16 @@
-## General Format
-## <left-addr> <left-port> <right-addr> <right-port> [options]
+### Bouncer Sample Configutarion ###
 
-##### Port Redirector (rinetd style) #####
+##### Port Redirector #####
 
 ## <listen-addr> <listen-port> <remote-addr> <remote-port> [options]
+## rinetd style
 # 0.0.0.0 80 127.0.0.1 8080
+## stunnel style 
 # 127.0.0.1 8080 encrypted.google.com 443 LB=RR,TUN=SSL
 
-##### Reverse tunnels #####
+##### Reverse Tunnels #####
 
-### Bouncer pre-2.0 syntax (rinetd style) ###
+### Bouncer 1.x legacy syntax ###
 
 ## MUX-IN (SSL/TLS)
 ## <listen-tun-addr> <listen-tun-port> <listen-addr> <listen-port> MUX-IN
@@ -19,17 +20,17 @@
 ## <remote-addr> <remote-port> <remote-tun-addr> <remote-tun-port> MUX-OUT
 # 192.168.1.1 80 192.168.2.1 5555 MUX=OUT,MUX=SSL,SSL=client.crt:client.key:server.crt
 
-### Alternative syntax with support for multi-port ###
+### Bouncer 2.x syntax, with support for multi-port ###
 
 ## MUX-IN (AES)
 ## <mux-listen|tun-listen> <mux-name> <listen-addr> <listen-port> [opts]
-# mux-listen mux1 0.0.0.0 5555 MUX=AES,AES=changeit,AESBITS=256,AESALG=AES/CTR/NoPadding
+# mux-listen mux1 0.0.0.0 5555 MUX=AES,AES=changeit
 # tun-listen mux1 0.0.0.0 2222 TUN_ID=1
 # tun-listen mux1 0.0.0.0 8080 TUN_ID=2
 
 ## MUX-OUT (AES)
 ## <mux-connect|tun-connect> <mux-name> <remote-addr> <remote-port> [opts]
-# mux-connect mux1 127.0.0.1 5555 MUX=AES,AES=changeit,AESBITS=256,AESALG=AES/CTR/NoPadding
+# mux-connect mux1 127.0.0.1 5555 MUX=AES,AES=changeit
 # tun-connect mux1 192.168.2.1 80 TUN_ID=1
 # tun-connect mux1 192.168.2.1 22 TUN_ID=2
 
