--- a/sampleconf/bouncer.conf
+++ b/sampleconf/bouncer.conf
@@ -5,12 +5,19 @@
 ## <listen-addr> <listen-port> <remote-addr> <remote-port> [options]
 ## rinetd style
 # 0.0.0.0 80 127.0.0.1 8080
+# 0.0.0.0 110 127.0.0.1 1110 PROXY=SEND
 ## stunnel style 
 # 127.0.0.1 8080 encrypted.google.com 443 LB=RR,TUN=SSL
 
 ##### Reverse Tunnels #####
 
 ### Bouncer 1.x legacy syntax ###
+
+## MUX-IN
+# 192.168.2.1 5556 127.0.0.1 1110 MUX=IN,PROXY=SEND
+
+## MUX-OUT
+# 192.168.1.1 110 192.168.2.1 5556 MUX=OUT
 
 ## MUX-IN (SSL/TLS)
 ## <listen-tun-addr> <listen-tun-port> <listen-addr> <listen-port> MUX-IN
@@ -27,10 +34,12 @@
 # mux-listen mux1 0.0.0.0 5555 MUX=AES,AES=changeit
 # tun-listen mux1 0.0.0.0 2222 TUN_ID=1
 # tun-listen mux1 0.0.0.0 8080 TUN_ID=2
+# tun-listen mux1 0.0.0.0 1110 TUN_ID=3,PROXY=SEND
 
 ## MUX-OUT (AES)
 ## <mux-connect|tun-connect> <mux-name> <remote-addr> <remote-port> [opts]
 # mux-connect mux1 127.0.0.1 5555 MUX=AES,AES=changeit
 # tun-connect mux1 192.168.2.1 80 TUN_ID=1
 # tun-connect mux1 192.168.2.1 22 TUN_ID=2
+# tun-connect mux1 192.168.2.1 110 TUN_ID=3
 
