Sticky session, improved LB and better reload of MUX [close #11]

--- a/sampleconf/bouncer.conf
+++ b/sampleconf/bouncer.conf
@@ -7,7 +7,7 @@
 # 0.0.0.0 80 127.0.0.1 8080
 # 0.0.0.0 110 127.0.0.1 1110 PROXY=SEND
 ## stunnel style 
-# 127.0.0.1 8080 encrypted.google.com 443 LB=RR,TUN=SSL
+# 127.0.0.1 8080 encrypted.google.com 443 LB=RR,STICKY=MEM:24:128:300,TUN=SSL
 
 ##### Reverse Tunnels #####
 
