include LICENSE in packaging

--- a/assembly/package.xml
+++ b/assembly/package.xml
@@ -53,6 +53,13 @@
 				<include>safeToDelete.tmp</include>
 			</includes>
 		</fileSet>
+		<fileSet>
+			<directory>${project.basedir}/</directory>
+			<outputDirectory>/</outputDirectory>
+			<includes>
+				<include>LICENSE</include>
+			</includes>
+		</fileSet>
 	</fileSets>
 	<dependencySets>
 		<dependencySet>
