changed mux-listen to mux-in and mux-connect to mux-out for consistency with legacy config and doc, allow old tokens for retrocompatibility

--- a/sampleconf/bouncer.conf
+++ b/sampleconf/bouncer.conf
@@ -30,15 +30,15 @@
 ### Bouncer 2.x syntax, with support for multi-port ###
 
 ## MUX-IN (AES)
-## <mux-listen|tun-listen> <mux-name> <listen-addr> <listen-port> [opts]
-# mux-listen mux1 0.0.0.0 5555 MUX=AES,AES=changeit
+## <mux-in|tun-listen> <mux-name> <listen-addr> <listen-port> [opts]
+# mux-in mux1 0.0.0.0 5555 MUX=AES,AES=changeit
 # tun-listen mux1 0.0.0.0 2222 TUN_ID=1
 # tun-listen mux1 0.0.0.0 8080 TUN_ID=2
 # tun-listen mux1 0.0.0.0 1110 TUN_ID=3,PROXY=SEND
 
 ## MUX-OUT (AES)
-## <mux-connect|tun-connect> <mux-name> <remote-addr> <remote-port> [opts]
-# mux-connect mux1 127.0.0.1 5555 MUX=AES,AES=changeit
+## <mux-out|tun-connect> <mux-name> <remote-addr> <remote-port> [opts]
+# mux-out mux1 127.0.0.1 5555 MUX=AES,AES=changeit
 # tun-connect mux1 192.168.2.1 80 TUN_ID=1
 # tun-connect mux1 192.168.2.1 22 TUN_ID=2
 # tun-connect mux1 192.168.2.1 110 TUN_ID=3
