--- a/sampleconf/bouncer.conf
+++ b/sampleconf/bouncer.conf
@@ -6,6 +6,8 @@
 ## rinetd style
 # 0.0.0.0 80 127.0.0.1 8080
 # 0.0.0.0 110 127.0.0.1 1110 PROXY=SEND
+# 0.0.0.0 25 127.0.0.1 9025 PROXY=SEND,STICKY=MEM:24:128:300:cluster1:sticky1
+# 0.0.0.0 465 127.0.0.1 20465 PROXY=SEND,STICKY=MEM:24:128:300:cluster1:sticky2
 ## stunnel style 
 # 127.0.0.1 8080 encrypted.google.com 443 LB=RR,STICKY=MEM:24:128:300,TUN=SSL
 
@@ -43,3 +45,11 @@
 # tun-connect mux1 192.168.2.1 22 TUN_ID=2
 # tun-connect mux1 192.168.2.1 110 TUN_ID=3
 
+## Clustering
+## <cluster-in|cluster-out> <cluster-id> <addr> <port> [opts]
+# Node 1
+# cluster-in cluster1 0.0.0.0 65004 CLUSTER=AES,AES=changeit
+# cluster-out cluster1 10.1.1.2 65004 CLUSTER=AES,AES=changeit
+# Node 2
+# cluster-in cluster1 0.0.0.0 65004 CLUSTER=AES,AES=changeit
+# cluster-out cluster1 10.1.1.1 65004 CLUSTER=AES,AES=changeit
