Support for End SSL (TUN=ENDSSL,ENDSSL=[files]) [close #17]

--- a/sampleconf/bouncer.conf
+++ b/sampleconf/bouncer.conf
@@ -10,7 +10,7 @@
 # 0.0.0.0 465 127.0.0.1 20465 PROXY=SEND,STICKY=MEM:24:128:300:cluster1:sticky2
 ## stunnel style 
 # 127.0.0.1 8080 encrypted.google.com 443 LB=RR,STICKY=MEM:24:128:300,TUN=SSL
-# 127.0.0.1 443 encrypted.google.com 443 TUN=ENDSSL,SSL=server.crt:server.key,TUN=SSL
+# 127.0.0.1 443 encrypted.google.com 443 TUN=ENDSSL,ENDSSL=server.crt:server.key,TUN=SSL
 
 ##### Reverse Tunnels #####
 
