--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.javastack</groupId>
 	<artifactId>bouncer</artifactId>
-	<version>2.2.8</version>
+	<version>2.2.9</version>
 	<description>Bouncer is a network TCP port redirector/forward proxy (like rinetd) with extra features like Reverse tunneling (like ssh -R), SSL tunneling (like stunnel), connection Failover, LoadBalancing and Clustering.</description>
 
 	<name>${project.groupId}:${project.artifactId}</name>
@@ -57,6 +57,7 @@
 							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
 						</manifest>
 						<manifestEntries>
+							<Main-Class>org.javastack.bouncer.Bouncer</Main-Class>
 							<Built-By>maven</Built-By>
 						</manifestEntries>
 					</archive>
